--- a/css/messtyles.css
+++ b/css/messtyles.css
@@ -69,14 +69,21 @@ article{
     font-size: 3.6rem;
     display: flex;
     align-items: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 span{
     font-weight: bold;
 }
 
-.fleche {
 
+.material-symbols-outlined {
+color: black;
+background-color: white;
+border: solid 1px gray;
+border-radius: 100%;
+font-size: 2rem;
 
 }
  /* Header
@@ -94,8 +101,9 @@ height: 200px;
  .contenu .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: last baseline;
-    gap: 22px;
+    align-items: center;
+    justify-content: space-between;
+    
    
     
  }
@@ -104,7 +112,14 @@ height: 200px;
     text-decoration: none;
     color: black;
     width: 1100px;
+    
+
  }
+ article{
+    gap: 60px;
+ }
+
+
 
  .contenu a:hover{
     background-color: #BDC3C7;
@@ -133,9 +148,13 @@ height: 200px;
  footer{
     display: flex;
     background-color: #2980B9;
+    height: 100px;
  }
  footer .wrapper{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+ }
+ footer h3{
+    font-size: 2rem;
  }
